fixed footer spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,7 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 20px 35px;
-    background-image: url("../assets/images/hero.jpg");
+    background-image: url("../assets/images/nepal-2184940__340.webp");
     background-size: cover;
     background-position: 40%;
 }
@@ -140,18 +140,19 @@ header a {
 footer {
     padding: 40px 35px;
     display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
-    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
     background-color: darkgrey;
 }
 
 footer div {
     color: darkblue;
     line-height: 2.5;
-    text-align: right;
     font-weight: bold;
-    vertical-align: top;
+    /* flex: 0 0 80%; */
+    padding-left: 20px;
+    justify-content: right;
 }
 
 footer h2 {
@@ -159,9 +160,6 @@ footer h2 {
     border-style: solid;
     border-width: 0 3px 0 0;
     border-color: darkblue;
-    position: relative;
-    margin-right: 1800px;
-    text-align: right;
     padding: 5px;
 }
 
